add more extension skeleton code

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -1,7 +1,11 @@
 <html>
   <body>
-    <button id="setBtn">set</button>
-    <button id="getBtn">get</button>
+    <!--<button id="setBtn">storage test - set</button>
+    <button id="getBtn">storage test - get</button>-->
+    <textarea id="pastedEula" placeholder="Paste any EULA here."></textarea>
+    <button id="submitPastedEulaBtn">Analyse!</button>
+    <div id="analysisResult"></div>
     <script src="/scripts/storage.js"></script>
+    <script src="/scripts/analysis.js"></script>
   </body>
 </html>
