--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -1,10 +1,14 @@
 <html>
+  <link rel="stylesheet" href="EULA.css">
   <body>
     <!--<button id="setBtn">storage test - set</button>
     <button id="getBtn">storage test - get</button>-->
     <textarea id="pastedEula" placeholder="Paste any EULA here."></textarea>
     <button id="submitPastedEulaBtn">Analyse!</button>
     <div id="analysisResult"></div>
+    <button id="HOME">Home</button>
+    <div id="content">view</div>
+    <script src="popup.js"></script>
     <script src="/scripts/storage.js"></script>
     <script src="/scripts/analysis.js"></script>
   </body>
