--- a/popup/pages/home.html
+++ b/popup/pages/home.html
@@ -1,6 +1,7 @@
+<html>
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dashboard" />
-    <link rel="stylesheet" href="home.css"></link>
+    <link rel="stylesheet" href="/popup/styles/home.css"></link>
 </head>
 
 <div>
@@ -43,3 +44,4 @@
     </div>
 
 </div>
+</html>
