--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -5,9 +5,15 @@
     <button id="getBtn">storage test - get</button>-->
     <textarea id="pastedEula" placeholder="Paste any EULA here."></textarea>
     <button id="submitPastedEulaBtn">Analyse!</button>
+    <div class="graph-button" >
+      <a href="graph/graph.html" target="_blank">
+        graph
+      </a>
+    </div>
     <div id="analysisResult"></div>
     <button id="HOME">Home</button>
     <div id="content">view</div>
+
     <script src="popup.js"></script>
     <script src="/scripts/storage.js"></script>
     <script src="/scripts/analysis.js"></script>
