--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -6,8 +6,8 @@
       <li><a id="home">Home</a></li>
       <li><a id="customEula">Custom EULA</a></li>
       <li><a id="preferences">Preferences</a></li>
+      <li><a href="graph/graph.html" target="_blank">Graph</a></li>
     </ul>
-
     <div id="content"></div>
     <script src="/scripts/popup.js"></script>
   </body>
