Added websites page; implemented search functionality; dynamically load icons froms storage

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -7,6 +7,7 @@
       <li><a id="customEula">Custom EULA</a></li>
       <li><a id="preferences">Preferences</a></li>
       <li><a href="graph/graph.html" target="_blank">Graph</a></li>
+      <li><a id="websites">Websites</a></li>
     </ul>
     <div id="content"></div>
     <script src="/scripts/popup.js"></script>
