--- a/popup/pages/home.html
+++ b/popup/pages/home.html
@@ -2,12 +2,11 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="/popup/styles/home.css" />
+    <script>console.log("loaded successfully");
+    </script>
 </head>
 
 <body>
-    <div class="containersearch">
-    <input type="text" id="searchbox" placeholder="Search"></input>
-</div>
     <div class="icon-grid">
         <div class="icon" id = "findEULAButton" role = "button" tabindex="0" title="Find EULAs">
             <span class="material-symbols-outlined">quick_reference_all</span>
