adding of survey page

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -41,6 +41,7 @@
         <div id="add-eula" class="sidebar-icon"></div>
         <div id="preferences" class="sidebar-icon"></div>
         <a href="graph/graph.html" target="_blank"><div id="graph" class="sidebar-icon"></div></a>
+        <a href="pages/survey.html" target="_blank"><div id="preferences" class="sidebar-icon"></div></a>
       </div>
       
     </div>
