--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -29,7 +29,6 @@
           </div>
 
           <div id="panel-content" class="content">
-            YEAH
           </div>
 
         </div>
@@ -55,7 +54,10 @@
     </ul> -->
     
     <!-- <div id="content"></div> -->
+    <script src="../lib/d3.v7.min.js"></script>
     <script src="../lib/fuse.js"></script>
+    <script src="../lib/create_arc.js"></script>
+
     <script src="../scripts/storage.js"></script>
     <script src="/scripts/popup.js"></script>
   </body>
