improved modal popup when eula detected, moved highlight feature to sidebar

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -39,6 +39,7 @@
         <div id="home" class="sidebar-icon"></div>
         <div id="add-eula" class="sidebar-icon"></div>
         <a href="pages/survey.html" target="_blank"><div id="preferences" class="sidebar-icon"></div></a>
+        <div id="highlight" class="sidebar-icon"></div>
         <a href="graph/graph.html" target="_blank"><div id="graph" class="sidebar-icon"></div></a>
       </div>
       
