add support for saving custom analysis

--- a/popup/pages/add.html
+++ b/popup/pages/add.html
@@ -5,7 +5,7 @@
     <body>
         <div class="center-items">
             <textarea id="pastedEula" placeholder="Paste any EULA here."></textarea>
-            <button id="submitPastedEulaBtn">Analyse!</button>
+            <button id="submitPastedEulaBtn">Analyse</button>
         </div>
         <div id="analysisResult"></div>
 
