--- a/popup/pages/survey.html
+++ b/popup/pages/survey.html
@@ -62,6 +62,17 @@
                             </div>
                         </div>
 
+                        <!-- Question 5: Security Concern -->
+                        <div class="form-group">
+                            <label>5. How concerned are you about security?</label>
+                            <div class="radio-group">
+                                <label><input type="radio" name="security_concern" value="not_concerned" required> Not Concerned</label>
+                                <label><input type="radio" name="security_concern" value="slightly_concerned"> Slightly Concerned</label>
+                                <label><input type="radio" name="security_concern" value="moderately_concerned"> Moderately Concerned</label>
+                                <label><input type="radio" name="security_concern" value="very_concerned"> Very Concerned</label>
+                            </div>
+                        </div>
+
                         <!-- Submit Button -->
                         <button type="submit" class="submit-btn">Submit Survey</button>
                     </form>
