Added basic option to remove hidden websites, need to improve formatting and add search option

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -40,6 +40,8 @@
         <div id="add-eula" class="sidebar-icon"></div>
         <a href="pages/survey.html" target="_blank"><div id="preferences" class="sidebar-icon"></div></a>
         <div id="highlight" class="sidebar-icon"></div>
+        <div id="hidden-sites" class="sidebar-icon"></div>
+
         <a href="graph/graph.html" target="_blank"><div id="graph" class="sidebar-icon"></div></a>
       </div>
       
