--- a/popup/graph/graph.html
+++ b/popup/graph/graph.html
@@ -42,6 +42,7 @@
     <script src="../../lib/d3.v7.min.js"></script>
     <script src="../../lib/panzoom.min.js"></script>
     <script src="../../lib/create_arc.js"></script>
+    <script src="../../scripts/storage.js"></script>
 
     <script src="scripts/panel.js"></script>
     <script src="scripts/graph.js"></script>
