--- a/popup/pages/hidden.html
+++ b/popup/pages/hidden.html
@@ -1,13 +1,19 @@
 <html>
     <head>
         <link rel="stylesheet" href="/popup/styles/hidden.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
         <div class="center-items">
             <h1>Hidden Sites</h1>
+            <div class="search-bar-container">
+                <div class="search-bar-inner">
+                  <div class="search-icon"></div>
+                  <input type="text" id="hidden-search-bar" placeholder="Search">
+                </div>
             <ul id = "site-list">
               </ul>
         </div>
-        <script src="/scripts/hiddenSites.js"></script>
+        <script src="/scripts/hiddenSites.js" defer></script>
     </body>
 </html>
