--- a/popup/pages/hidden.html
+++ b/popup/pages/hidden.html
@@ -11,8 +11,9 @@
                   <div class="search-icon"></div>
                   <input type="text" id="hidden-search-bar" placeholder="Search">
                 </div>
-            <ul id = "site-list">
-              </ul>
+            </div>
+
+            <div class="all-app-container" id="hidden-all-app-container">
         </div>
         <script src="/scripts/hiddenSites.js" defer></script>
     </body>
