settings page basic functionality + fixed highlight button (someone had just completely overwritten background.js)!

--- a/popup/EULA.html
+++ b/popup/EULA.html
@@ -37,11 +37,11 @@
 
       <div class="sidebar-container">
         <div id="home" class="sidebar-icon"></div>
-        <div id="add-eula" class="sidebar-icon"></div>
         <a href="pages/survey.html" target="_blank"><div id="preferences" class="sidebar-icon"></div></a>
         <div id="highlight" class="sidebar-icon"></div>
         <div id="hidden-sites" class="sidebar-icon"></div>
-
+        <div id="settings" class="sidebar-icon"></div>
+        <div id="add-eula" class="sidebar-icon"></div>
         <a href="graph/graph.html" target="_blank"><div id="graph" class="sidebar-icon"></div></a>
       </div>
       
