--- a/popup/pages/hidden.html
+++ b/popup/pages/hidden.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
 
-            <div class="all-app-container" id="hidden-all-app-container">
+            <div class="all-app-container" id="hidden-all-app-container"></div>
         </div>
         <script src="/scripts/hiddenSites.js" defer></script>
     </body>
