add reset button

--- a/popup/pages/settings.html
+++ b/popup/pages/settings.html
@@ -3,10 +3,12 @@
         <link rel="stylesheet" href="/popup/styles/settings.css" />
     </head>
     <body>
-        Search for new EULAs
+        <h1>Search for new EULAs</h1>
         <label class="switch">
             <input type="checkbox" id = "run_extension">
             <span class="slider round"></span>
         </label>
+        <h1>Reset Data</h1>
+        <button id="dataReset">RESET</button>
     </body>
 </html>
